Fixed small issue with image displaying weirdly on mobile screens.

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -108,6 +108,14 @@ a:hover {
 	.nav-link, .dropdown-item {
 		font-size: calc(12px + 1.5vw);
 	}
+
+	#hiddenImage > img {
+        position: static !important;
+        width: auto !important;
+        height: auto !important;
+        object-fit: none !important;
+        object-position: initial !important;
+    }
 }
 
 .bg-frispel-dark {
